--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,19 @@
     <string name="gps_app_name"       >GPS Skyplot</string>
 
     <string name="unused_button_label"> </string>
-    <string name="no_project_open"    >No Project Open</string>
     <string name="no_points_in_project">No Points in Project</string>
     <string name="exchange_subject"    >Exchange for Project </string>
     <string name="email_message_prologue_1">This email contains CDF for Project:</string>
     <string name="email_message_prologue_2"> and any points it contains</string>
 
+
+    <!-- Project must be open  -->
+    <string name="project_not_open_to_list_points">Project must be open to list points</string>
+    <string name="project_opened_1"               >Project ID =   </string>
+    <string name="project_opened_2"               >     now Open </string>
+    <string name="cogo_project_must_be_open"      >Project must be open to add points</string>
+    <string name="no_project_open"                >No Project Open</string>
+    <string name="collect_project_must_be_open"   >Project must be Open to collect points</string>
 
 
     <!-- Exceptions -->
@@ -20,6 +27,7 @@
     <string name="no_projects"               >No projects defined</string>
     <string name="no_points"                 >No points defined</string>
     <string name="date_hint">Must use proper date input</string>
+    <string name="test_data_invalid"         >Test Data Not Valid</string>
 
     <!-- ORDER of screens is: -->
     <!-- Menu     -->
@@ -54,6 +62,7 @@
 
 
     <!-- Project Subtitles -->
+    <string name="subtitle_home"            >Home</string>
     <string name="subtitle_create_project"  >Create Project</string>
     <string name="subtitle_open_project"    >Open Project</string>
     <string name="subtitle_copy_project"    >Copy Project</string>
@@ -72,18 +81,29 @@
     <string name="subtitle_show_point"      >Show Point</string>
     <string name="subtitle_collect_points"  >Collect Points</string>
 
+    <string name="subtitle_collect"         >Collect</string>
+    <string name="subtitle_cogo"           >COGO</string>
+    <string name="subtitle_configurations"  >Configurations</string>
+    <string name="subtitle_points"          >Points</string>
+    <string name="subtitle_projects"        >Projects</string>
+    <string name="subtitle_settings"        >Settings</string>
+    <string name="subtitle_skyplots"        >Skyplot</string>
+    <string name="subtitle_stakeout"        >Stakeout</string>
+    <string name="subtitle_maps"            >Maps</string>
+    <string name="subtitle_support"         >Support</string>
+    <string name="subtitle_general_settings">General Settings</string>
+    <string name="subtitle_compass"         >Compass</string>
+    <string name="subtitle_coordinate_conversion">Coordinate Conversion</string>
+    <string name="subtitle_global_settings">Global Settings</string>
     <string name="subtitle_project_settings">Project Settings</string>
-    <string name="subtitle_unknown_error"   >Unknown Error</string>
     <string name="subtitle_convert_to_utm"  >Convert to UTM</string>
     <string name="subtitle_list_nmea"       >List NMEA Sentences</string>
     <string name="subtitle_list_satellites" >List Visible Satellites</string>
     <string name="subtitle_gps_nmea"        >GPS data from NMEA</string>
     <string name="subtitle_workflow"        >Coordinate Workflow</string>
 
-    <string name="subtitle_maps"            >Maps</string>
-    <string name="subtitle_support"         >Support</string>
-    <string name="subtitle_general_settings">General Settings</string>
-    <string name="subtitle_compass"         >Compass</string>
+    <string name="subtitle_unknown_error"   >Unknown Error</string>
+
 
 
     //Collect menu items
@@ -99,10 +119,11 @@
     <string name="action_delete">Delete</string>
 
     //Exception Strings
-    <string name="latitude_out_of_range">Latitude out of range</string>
+    <string name="latitude_out_of_range" >Latitude out of range</string>
     <string name="longitude_out_of_range">Longitude out of range</string>
-    <string name="coordinate_invalid">Coordinate out of range</string>
-    <string name="coordinate_try_again">Coordinates not valid, please input again</string>
+    <string name="coordinate_invalid"    >Coordinate out of range</string>
+    <string name="coordinate_try_again"  >Coordinates not valid, please input again</string>
+    <string name="coordinate_not_valid"  >Coordinate not valid</string>
 
 
     <!-- Button Labels -->
@@ -145,7 +166,7 @@
     <string name="unrecognized_path_encountered">Unrecognized Path Encountered: </string>
     <string name="delete_path_1">Selected Project </string>
     <string name="delete_path_2"> is Deleted</string>
-    <string name="project_not_open_to_list_points">Project must be open to list points</string>
+
 
     <string name="project_changed_sure_question"
         >Project has changed, User will be asked: Are you sure you want to exit without saving?</string>
@@ -188,8 +209,6 @@
     <string name="project_selected"         >Project Selected</string>
     <string name="project_selection_ignored">Project Selection Ignored</string>
     <string name="project_no_selection"     >Project Has NOT been selected yet</string>
-    <string name="project_opened_1"         >Project ID =   </string>
-    <string name="project_opened_2"         >     now Open </string>
 
 
 
@@ -359,7 +378,6 @@
     <string name="cogo_map_check_button_label"    >Map Check</string>
     <string name="cogo_convert_button_label"      >Translate</string>
 
-    <string name="cogo_project_must_be_open"      >Project must be open to add points</string>
 
 
 
